--- a/front/src/components/Features/Features.scss
+++ b/front/src/components/Features/Features.scss
@@ -5,18 +5,18 @@
 
 .sr-only {
     border: 0 !important;
-    clip: rect(1px, 1px, 1px, 1px) !important;
+    clip: rect(1px, 1px, 1px, 1px);
     /* 1 */
-    -webkit-clip-path: inset(50%) !important;
-    clip-path: inset(50%) !important;
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
     /* 2 */
-    height: 1px !important;
-    margin: -1px !important;
-    overflow: hidden !important;
-    padding: 0 !important;
-    position: absolute !important;
-    width: 1px !important;
-    white-space: nowrap !important;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
     /* 3 */
 }
 
